--- a/apps/http-layer/package.json
+++ b/apps/http-layer/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx esbuild src/index.ts --bundle --outfile=dist/index.js --platform=node --tsconfig=tsconfig.json",
-    "start": "node dist/index.js",
+    "start": "nodemon dist/index.js",
     "dev": "pnpm run build && pnpm run start"
   },
   "keywords": [],
@@ -13,10 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
