--- a/apps/http-layer/package.json
+++ b/apps/http-layer/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx esbuild src/index.ts --bundle --outfile=dist/index.js --platform=node --tsconfig=tsconfig.json",
-    "start": "nodemon dist/index.js",
+    "start": "nodemon -r dotenv/config --experimental-json-modules dist/index.js",
     "dev": "pnpm run build && pnpm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.3",
     "@repo/db": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
